MobileApp section styled

--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -36,7 +36,7 @@
 
 .Hero {
     color: rgb(214, 35, 0);
-    background-color: #fff;
+    background-color: rgb(245, 235, 220);
     padding: 0.8rem 2.5rem;
     font-size: 1.4rem;
     letter-spacing: 0px;
