--- a/src/index.css
+++ b/src/index.css
@@ -6,5 +6,5 @@
 
 body {
     background-color: #f5ebdc;
-    font-family: "Cooper Black", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
