--- a/src/components/Main/Hero/Hero.module.css
+++ b/src/components/Main/Hero/Hero.module.css
@@ -18,7 +18,7 @@
     font-size: 10rem;
     letter-spacing: -10px;
     line-height: 10rem;
-    color: #fff;
+    color: rgb(245, 235, 220);
     text-align: left;
 }
 
