--- a/src/components/Main/MobileApp/MobileApp.module.css
+++ b/src/components/Main/MobileApp/MobileApp.module.css
@@ -2,7 +2,7 @@
     display: flex;
     background-color: rgb(239, 225, 204);
     position: relative;
-    margin: 10rem auto;
+    margin: 10rem auto 0rem;
     justify-content: center;
 }
 
@@ -25,7 +25,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 4.75rem 2.625rem 4.75rem 0rem;
+    padding: 4.75rem 2.625rem 6rem 0rem;
     flex: 50%;
 }
 
