--- a/src/components/Main/Menu/Card/Card.module.css
+++ b/src/components/Main/Menu/Card/Card.module.css
@@ -1,8 +1,7 @@
 .Card {
-    max-width: 400px;
+    width: 400px;
     display: flex;
     flex-direction: column;
-    margin-right: 3rem;
     background-color: #fff;
     cursor: pointer;
     border-radius: 10px;
@@ -16,12 +15,15 @@
 
 .CardImage {
     flex: 72%;
+    height: 300px;
 }
 
 .CardImage img {
     width: 100%;
     height: 100%;
     border-radius: 10px 10px 0px 0px;
+    object-fit: cover;
+    object-position: center center;
 }
 
 .CardDescription {
