--- a/src/components/Main/Menu/Menu.module.css
+++ b/src/components/Main/Menu/Menu.module.css
@@ -1,3 +1,7 @@
+.Menu {
+    margin: 4rem;
+}
+
 .MenuCards {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -13,13 +17,13 @@
     margin: 2rem 1rem;
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1300px) {
     .MenuCards {
         grid-template-columns: repeat(2, 1fr);
     }
 }
 
-@media screen and (max-width: 680px) {
+@media screen and (max-width: 920px) {
     .MenuCards {
         grid-template-columns: repeat(1, 1fr);
     }
