--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -51,3 +51,13 @@
     color: #ccc;
     cursor: not-allowed;
 }
+
+.Order {
+    font-size: 1.25rem;
+    text-transform: none;
+    color: rgb(245, 235, 220);
+    background-color: rgb(214, 35, 0);
+    width: 100%;
+    padding: 0.75rem 3rem;
+    letter-spacing: 0px;
+}
