--- a/src/components/UI/CustomizationOption/CustomizationOption.module.css
+++ b/src/components/UI/CustomizationOption/CustomizationOption.module.css
@@ -1,17 +1,26 @@
 .CustomizationOption {
     display: flex;
     background-color: #fff;
-    border-radius: 3rem;
-    padding: 0.5rem;
+    padding: 0 0.5rem;
+    border: 0px;
+    border-radius: 10px;
+    transition: border 0.3s ease 0s;
+    opacity: 1;
+    min-height: 100px;
+    align-items: center;
+    position: relative;
+    text-align: left;
+    margin-bottom: 1rem;
 }
 
 .CustomizationOptionImage {
-    flex: 10%;
     padding: 0 0.2rem;
 }
 
 .CustomizationOptionImage img {
-    width: 100%;
+    height: 70px;
+    width: 70px;
+    margin-right: 13px;
 }
 
 .CustomizationOptionDescription {
@@ -21,12 +30,22 @@
     justify-content: space-between;
 }
 
+.CustomizationOptionDescription h3 {
+    font-size: 1.25rem;
+    text-transform: none;
+    font-weight: 700;
+    letter-spacing: -1px;
+}
+
 .CustomizationOptionDescription p {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
 }
 
 .CustomizationOptionDescription span {
-    opacity: 0.95;
+    margin-top: 0.25rem;
+    font-size: 0.8375rem;
+    line-height: 1.1;
+    opacity: 0.9;
 }
 
 .CustomizationOption.active {
