--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -61,3 +61,15 @@
     padding: 0.75rem 3rem;
     letter-spacing: 0px;
 }
+
+.Cart {
+    font-size: 1.25rem;
+    letter-spacing: 0px;
+    text-transform: none;
+    color: rgb(245, 235, 220);
+    background-color: rgb(214, 35, 0);
+    border: 0px;
+    width: 100%;
+    padding: 0.75rem 3rem;
+    border-radius: 0px;
+}
