implemented cart opening/closing functionality

--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -73,3 +73,13 @@
     padding: 0.75rem 3rem;
     border-radius: 0px;
 }
+
+.Secondary:active {
+    background-color: rgb(80, 35, 20);
+    border-color: rgb(80, 35, 20);
+    color: rgb(245, 235, 220);
+}
+.Secondary:focus {
+    outline: 0px;
+    box-shadow: rgb(237 185 165) 0px 0px 0px 0.25rem;
+}
