--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -3,8 +3,8 @@
     background: rgb(245, 235, 220);
     opacity: 1;
     position: absolute;
-    right: 2rem;
-    top: 4.5rem;
+    right: 0;
+    top: 2.5rem;
     transform: translateY(0px);
     transition: all 200ms ease-out 0s;
     visibility: visible;
