--- a/src/containers/Customization/Customization.module.css
+++ b/src/containers/Customization/Customization.module.css
@@ -18,23 +18,22 @@ main {
 .CustomizationHero {
     position: relative;
     flex-shrink: 0;
-    max-width: 50vh;
-    max-height: 50vh;
-
-    margin: 100px auto 0px;
-
     border-radius: inherit;
     position: relative;
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
 }
 
 .CustomizationHero img {
     border-radius: inherit;
     display: block;
     position: absolute;
-    inset: 0px;
-    width: 100%;
+    /* inset: 0px; */
+    /* width: 100%; */
+    max-width: 30%;
     object-fit: cover;
     object-position: center center;
     opacity: 1;
