--- a/src/containers/Checkout/Checkout.module.css
+++ b/src/containers/Checkout/Checkout.module.css
@@ -1,22 +1,17 @@
-@media screen and (min-width: 813px)
-<style>
-.fLtFyC {
-    padding: 2rem 3rem;
-    gap: 2rem;
-    grid-template-areas:
-        "details cart"
-        "upsell cart"
-        "payment cart";
-    grid-template-columns: minmax(min-content, 6fr) minmax(min-content, 4fr);
-    grid-template-rows: min-content min-content 1fr;
+div > h2 {
+    color: rgb(43, 2, 0);
+    font-size: 1.25rem;
+    font-weight: 700;
+    margin: 0px 0px 0.625rem;
+    text-transform: none;
 }
-<style>
-.fLtFyC {
+
+.Checkout {
     margin: 0px auto;
+    padding: 4rem 1rem;
     width: 100%;
     max-width: 1200px;
     display: grid;
-    padding: 1rem;
     gap: 1.5rem;
     grid-template-areas:
         "details"
@@ -24,28 +19,66 @@
         "cart"
         "payment";
     grid-template-columns: 100%;
+}
 
+.CheckoutHeader {
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    background: rgb(80, 35, 20);
+    position: fixed;
+    width: 100%;
+    top: 0px;
+    z-index: 200;
+    height: calc(57px + env(safe-area-inset-top));
+}
+.CheckoutHeader h1 {
+    font-size: 1.375rem;
+    color: rgb(245, 235, 220);
+    margin: 0.75rem auto;
+    text-transform: uppercase;
+    letter-spacing: -1px;
+}
+.CheckoutHeader > div {
+    position: absolute;
+    left: calc(2.25rem + env(safe-area-inset-left));
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    color: white;
 
-
+    font-size: 1.2rem;
+    line-height: 1.3;
+    font-weight: 700;
+}
 /* restourant */
-color: rgb(43, 2, 0);
-    font-family: Flame, "Cooper Black", "Helvetica Neue", Helvetica, Arial, sans-serif;
+.CheckoutAddress {
+    grid-area: details / details / details / details;
+}
+.CheckoutAddress > div {
+    display: flex;
+}
+/* .CheckoutAddress h2 {
+    color: rgb(43, 2, 0);
     font-size: 1.25rem;
-    font-weight: normal;
+    font-weight: 700;
     margin: 0px 0px 0.625rem;
     text-transform: none;
+} */
 
-
-    /*  change adress */
-    .gHYLA-d {
+.CheckoutAddress > div > span:first-of-type {
     color: rgb(118, 40, 35);
     font-size: 0.9375rem;
     font-weight: 500;
-    padding: 10px 0px;
+    padding: 5px 0px;
     margin-left: auto;
+    text-decoration: underline;
+    cursor: pointer;
+}
 
-
-
+.CheckoutAddressBox {
     /* resoutrant box */
     border-radius: 10px;
     box-shadow: rgb(73 73 73 / 20%) 0px 0px 4px 0px;
@@ -53,42 +86,79 @@ color: rgb(43, 2, 0);
     flex-direction: column;
     font-style: normal;
     font-size: 0.9375rem;
-    font-family: "Flame Sans", "Helvetica Neue", Helvetica, Arial, Verdana, sans-serif;
     padding: 0px;
     background-color: rgb(255, 255, 255);
-
-
-    /*  cart item li */
-    .bDakXA {
-    margin: 0px;
-    background-color: rgb(245, 235, 220);
-    color: rgb(43, 2, 0);
-    border-radius: 10px;
-    display: flex;
-
-    width: 100%;
-    background-color: rgb(255, 255, 255);
-    border-radius: 10px;
-    padding: 1rem;
-
-
-/* cart item heading */
-
-kYodFw {
-    padding: 0px 0.5rem 1rem;
-    display: flex;
-    -webkit-box-pack: justify;
-    justify-content: space-between;
+}
+.CheckoutAddressBoxDetails {
+    padding: 1.25rem 1.5rem;
 }
 
+.CheckoutAddressBoxDetails span:first-of-type {
+    font-weight: 700;
+}
+.CheckoutAddressBoxOptions {
+    border-top: 1px solid rgb(187, 163, 145);
+    background-color: rgb(255, 255, 255);
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
 
-/* cart item removed */
-iofXLM {
+    padding: 1.25rem 1.5rem;
+}
+
+.CheckoutExtraItems {
+    grid-area: upsell / upsell / upsell / upsell;
+}
+
+.CheckoutExtraItems > div {
     display: flex;
-    -webkit-box-pack: justify;
-    justify-content: space-between;
-    -webkit-box-align: center;
-    align-items: center;
-    padding: 0.25rem;
-    border-top: 1px solid rgb(245, 235, 220);
-    color: rgb(43, 2, 0);
+    overflow: auto;
+}
+
+.CheckoutCart {
+    grid-area: cart / cart / cart / cart;
+}
+
+.CheckoutCart button {
+    margin: 1rem auto;
+}
+
+.CheckoutCartTotals {
+    min-height: 108px;
+}
+
+.CheckoutCartTotals div {
+    display: flex;
+}
+.CheckoutCartTotals div > span:first-of-type {
+    flex-grow: 1;
+    line-height: 1.7;
+    color: inherit;
+    font-weight: inherit;
+}
+.CheckoutCartTotals hr {
+    margin: 1rem 0px;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    border-image: initial;
+    border-bottom: 1px solid rgb(105, 63, 52);
+}
+.CheckoutCartTotals div:last-of-type {
+    font-weight: 700;
+}
+
+.CheckoutOrderButton {
+    grid-area: payment / payment / payment / payment;
+}
+@media screen and (min-width: 813px) {
+    .Checkout {
+        padding: 6rem 3rem;
+        gap: 2rem;
+        grid-template-areas:
+            "details cart"
+            "upsell cart"
+            "payment cart";
+        grid-template-columns: minmax(min-content, 6fr) minmax(min-content, 4fr);
+        grid-template-rows: min-content min-content 1fr;
+    }
+}
