--- a/src/components/Customization/CustomizationHeading/CustomizationHeading.module.css
+++ b/src/components/Customization/CustomizationHeading/CustomizationHeading.module.css
@@ -11,3 +11,15 @@
     margin-bottom: 1rem;
     line-height: 1.45;
 }
+
+.price {
+    display: flex;
+    flex-direction: row;
+    margin-top: 0.25rem;
+    font-size: 0.9375rem;
+    color: rgb(27, 135, 55);
+    font-weight: 700;
+    justify-content: center;
+    line-height: 1.1;
+    margin: 0.5rem 0px 1.75rem;
+}
