added more items in the menu, created custom hook useprogressiveimage and adjusted some styling

--- a/src/components/Customization/CustomizationBackground/CustomizationBackground.module.css
+++ b/src/components/Customization/CustomizationBackground/CustomizationBackground.module.css
@@ -14,9 +14,9 @@
     border-radius: inherit;
     display: block;
     position: absolute;
-    /* inset: 0px; */
-    /* width: 100%; */
-    max-width: 30%;
+    width: 100%;
+    max-width: 400px;
+    /* max-width: 30%; */
     object-fit: cover;
     object-position: center center;
     opacity: 1;
