--- a/src/components/Sections/SectionItem/SectionItem.module.css
+++ b/src/components/Sections/SectionItem/SectionItem.module.css
@@ -18,7 +18,16 @@
 .SectionItemDescription {
     text-align: center;
     font-size: 1.2rem;
+    padding: 1.3rem 2rem;
 }
+
+.SectionItemDescription h2 {
+    letter-spacing: -1px;
+    font-weight: 700;
+}
+
 .SectionItemDescription span {
     font-size: 0.9rem;
+    font-weight: 600;
+    font-size: 0.8rem;
 }
