adjusted slidearrows styling, and added ReturnButton

--- a/src/components/SmallSlider/SmallSlider.module.css
+++ b/src/components/SmallSlider/SmallSlider.module.css
@@ -5,16 +5,6 @@
 
 .slides {
     /* margin: 118px auto; */
-    margin: 9rem auto;
+    margin: 9rem auto 3rem;
     max-width: 80vw;
 }
-
-/* 
-position: relative;
-    height: 100%;
-    display: flex;
-    -webkit-box-pack: center;
-    justify-content: center;
-    background-color: rgb(245, 235, 220);
-    padding: 0px 96px;
-    margin-top: 118px; */
