--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,20 @@ a {
     align-items: center;
     justify-content: center;
 }
+
+.slick-prev {
+    left: -40px !important;
+}
+
+.slick-next {
+    right: -40px !important;
+}
+.slick-prev:before,
+.slick-next:before {
+    font-size: 40px !important;
+    color: red !important;
+}
+
+h3 {
+    letter-spacing: -1px;
+}
