--- a/src/components/SmallSlider/CustomSlide/CustomSlide.module.css
+++ b/src/components/SmallSlider/CustomSlide/CustomSlide.module.css
@@ -1,35 +1,27 @@
 .CustomSlide {
-    /* display: inline-block;
-    height: 115px;
-    left: 1134.22px;
-    list-style-type: none;
-    margin: auto 0px;
-    position: absolute;
-    top: 0px;
-    transform: scale(1);
-    transition: transform 0.4s linear 0s;
-    vertical-align: top;
-    width: 141.778px; */
-
     display: flex !important;
     justify-content: center;
     align-items: center;
     cursor: pointer;
     flex-direction: column;
+    outline: none !important;
 }
 
-/* color: rgb(80, 35, 20);
-    font-size: 0.9375rem;
-    text-decoration: none;
-    text-transform: none;
-    position: relative;
-    margin: 0px auto;
+.CustomSlide a {
+    width: 100%;
     display: flex;
     flex-direction: column;
-    -webkit-box-pack: center;
-    justify-content: center;
-    font-family: Flame, "Cooper Black", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    padding: 1.3rem 0px 1rem; */
+    pointer-events: none;
+}
+
+a.active > span::before {
+    content: "";
+    background-color: rgb(80, 35, 20);
+    height: 2px;
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+}
 
 .CustomSlideImg {
     border-radius: 10px;
@@ -56,11 +48,3 @@
     white-space: nowrap;
     font-weight: 700;
 }
-
-/* before */
-/* content: "";
-    background-color: transparent;
-    height: 2px;
-    width: 100%;
-    position: absolute;
-    bottom: 0px; */
