in Checkout ExtraItems funcitonality adds items(90%) and a few minor changes outlied in plan.txt

--- a/src/components/Cart/CartItem/CartItem.module.css
+++ b/src/components/Cart/CartItem/CartItem.module.css
@@ -21,7 +21,9 @@
     font-weight: 500;
     margin: 0px;
 }
-
+.CartItemDescription div:first-of-type {
+    max-width: 80%;
+}
 .CartItemDescription {
     display: flex;
     -webkit-box-pack: justify;
