--- a/src/components/Navigation/Actions/Actions.module.css
+++ b/src/components/Navigation/Actions/Actions.module.css
@@ -5,3 +5,17 @@
 .Actions button:first-of-type {
     margin-right: 1rem;
 }
+
+.cartIcon {
+    margin-left: 0.5rem;
+    transition: fill 0.125s ease 0s;
+    fill: rgb(214, 35, 0);
+    align-items: center;
+    height: 0.75rem;
+    width: 0.75rem;
+}
+
+.ActionsCart {
+    display: flex;
+    align-items: center;
+}
