--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -75,11 +75,24 @@
     border-radius: 0px;
 }
 
+.Cart:active {
+    transform: scale(0.95);
+    background-color: rgb(80, 35, 20);
+}
+.Cart:focus:active {
+    box-shadow: rgb(237 185 165) 0px 0px 0px 0.25rem;
+}
+
 .Secondary:active {
     background-color: rgb(80, 35, 20);
     border-color: rgb(80, 35, 20);
     color: rgb(245, 235, 220);
 }
+
+.Secondary:active svg {
+    fill: rgb(245, 235, 220);
+}
+
 .Secondary:focus {
     outline: 0px;
     box-shadow: rgb(237 185 165) 0px 0px 0px 0.25rem;
