--- a/src/components/Checkout/CheckoutExtraItems/CheckoutExtraItem/CheckoutExtraItem.module.css
+++ b/src/components/Checkout/CheckoutExtraItems/CheckoutExtraItem/CheckoutExtraItem.module.css
@@ -19,6 +19,14 @@
     font-size: 0.9rem;
 }
 
+.CheckoutExtraItem {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
 .CheckoutExtraItem > div:first-of-type {
     width: 70px;
     height: 65px;
