--- a/src/components/Checkout/CheckoutExtraItems/CheckoutExtraItems.module.css
+++ b/src/components/Checkout/CheckoutExtraItems/CheckoutExtraItems.module.css
@@ -6,3 +6,19 @@
     display: flex;
     overflow: auto;
 }
+
+.CheckoutExtraItems {
+    width: 667px;
+    height: 150px;
+    overflow: auto;
+}
+
+@media screen and (max-width: 650px) {
+    .CheckoutExtraItems > div {
+        flex-direction: column;
+    }
+    .CheckoutExtraItems {
+        width: 100%;
+        height: 260px;
+    }
+}
