added react-toastify when adding item in the cart

--- a/src/index.css
+++ b/src/index.css
@@ -44,3 +44,23 @@ a {
 h3 {
     letter-spacing: -1px;
 }
+
+/* Toastify adjustments */
+.Toastify__toast--success {
+    background: #1a8a1d !important;
+}
+
+.Toastify__toast-container--bottom-center {
+    bottom: 0em !important;
+}
+
+.Toastify__toast {
+    margin-bottom: 0 !important;
+    justify-content: center !important;
+}
+
+.Toastify__close-button > svg {
+    width: 30px !important;
+    height: 20px !important;
+    margin-top: 0.8rem;
+}
