--- a/src/components/Customization/CustomizationBackground/CustomizationBackground.module.css
+++ b/src/components/Customization/CustomizationBackground/CustomizationBackground.module.css
@@ -29,13 +29,16 @@
     background-color: rgb(254, 135, 49);
     display: flex;
 }
-@media screen and (min-width: 813px) {
+@media screen and (max-width: 813px) {
+    .CustomizationHero img {
+        width: 85%;
+    }
     .CustomizationBackground {
         top: 228px;
     }
 }
-@media screen and (min-width: 813px) {
+/* @media screen and (min-width: 813px) {
     .CustomizationBackground {
         height: 350px;
     }
-}
+} */
