--- a/src/components/Customization/CustomizationHeading/CustomizationHeading.module.css
+++ b/src/components/Customization/CustomizationHeading/CustomizationHeading.module.css
@@ -21,3 +21,9 @@
     line-height: 1.1;
     margin: 1rem 0px 1.75rem;
 }
+
+@media screen and (max-width: 760px) {
+    .CustomizationHeading p {
+        text-align: center;
+    }
+}
