--- a/src/components/Navigation/Actions/Actions.module.css
+++ b/src/components/Navigation/Actions/Actions.module.css
@@ -19,3 +19,9 @@
     display: flex;
     align-items: center;
 }
+
+@media screen and (max-width: 760px) {
+    .Actions button:first-of-type {
+        display: none;
+    }
+}
