--- a/src/components/Navigation/Toolbar/Toolbar.module.css
+++ b/src/components/Navigation/Toolbar/Toolbar.module.css
@@ -1,11 +1,3 @@
-/* display: block;
-    position: fixed;
-    transform: translateY(0px) scale(1);
-    transition: transform 0.3s ease-out 0s;
-    width: 100%;
-    will-change: transform;
-    z-index: 500; */
-
 .Toolbar {
     display: block;
     width: 100%;
@@ -43,5 +35,11 @@
 @media (max-width: 499px) {
     .DesktopOnly {
         display: none;
+    }
+}
+
+@media screen and (max-width: 760px) {
+    .Toolbar {
+        padding: 10px;
     }
 }
