--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,7 @@ a {
 .slick-next {
     right: -40px !important;
 }
+
 .slick-prev:before,
 .slick-next:before {
     font-size: 40px !important;
@@ -63,4 +64,14 @@ h3 {
     width: 30px !important;
     height: 20px !important;
     margin-top: 0.8rem;
+}
+
+@media screen and (max-width: 760px) {
+    .slick-prev {
+        left: -25px !important;
+    }
+
+    .slick-next {
+        right: -10px !important;
+    }
 }
