--- a/src/components/Main/Menu/Card/Card.module.css
+++ b/src/components/Main/Menu/Card/Card.module.css
@@ -34,7 +34,7 @@
 }
 
 .CardDescription h2 {
-    font-weight: 700;
+    font-weight: normal;
     font-size: 1.5rem;
     margin-bottom: 0.5rem;
 }
