--- a/src/components/Main/MobileApp/MobileApp.module.css
+++ b/src/components/Main/MobileApp/MobileApp.module.css
@@ -16,7 +16,7 @@
 
 .MobileImage img {
     position: absolute;
-    transform: translateY(-13%);
+    transform: translateY(-10%);
     max-width: 480px;
 }
 
@@ -25,18 +25,20 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 4.75rem 2.625rem 6.65rem 0rem;
+    padding: 5.75rem 2.425rem 6.65rem 0rem;
     flex: 50%;
 }
 
 .MobileOffer h2 {
-    font-size: 4rem;
+    font-size: 4.375rem;
     color: #502314;
-    font-weight: 700;
-    line-height: 110%;
+    font-weight: normal;
+    line-height: 1;
 }
 .MobileOffer h2:first-of-type {
-    font-size: 2.3rem;
+    font-size: 2.25rem;
+    font-weight: normal;
+    margin-bottom: 0.25rem;
 }
 
 .MobileAppDownload {
@@ -44,7 +46,7 @@
 }
 
 .MobileLegal {
-    font-size: 0.85rem;
+    font-size: 0.75rem;
     max-width: 25rem;
 }
 
