--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -1,7 +1,7 @@
 .Button {
     background-color: transparent;
-    font-family: sans-serif;
-    font-weight: 700;
+    font-family: "Flame", sans-serif;
+    font-weight: normal;
     font-size: 0.845rem;
     text-align: center;
     text-transform: none;
@@ -39,10 +39,9 @@
 .Hero {
     color: rgb(214, 35, 0);
     background-color: rgb(245, 235, 220);
-    padding: 0.8rem 2.5rem;
-    font-size: 1.4rem;
-    letter-spacing: 0px;
-    font-weight: 700;
+    font-size: 1.25rem;
+    font-weight: 500;
+    padding: 0.75rem 3rem;
 }
 
 .Hero:hover {
@@ -61,12 +60,11 @@
     background-color: rgb(214, 35, 0);
     width: 100%;
     padding: 0.75rem 3rem;
-    letter-spacing: 0px;
+    /* letter-spacing: 0px; */
 }
 
 .Cart {
     font-size: 1.25rem;
-    letter-spacing: 0px;
     text-transform: none;
     color: rgb(245, 235, 220);
     background-color: rgb(214, 35, 0);
