--- a/src/containers/Checkout/Checkout.module.css
+++ b/src/containers/Checkout/Checkout.module.css
@@ -1,10 +1,10 @@
-div > h2 {
+/* div > h2 {
     color: rgb(43, 2, 0);
     font-size: 1.25rem;
-    font-weight: 700;
+  font-weight: 700;
     margin: 0px 0px 0.625rem;
     text-transform: none;
-}
+} */
 
 .Checkout {
     margin: 0px auto;
