--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,24 @@
     font-display: swap;
 }
 
+p {
+    font-family: "Flame Sans", "Helvetica Neue", Helvetica, Arial, Verdana,
+        sans-serif;
+    font-size: 0.9375rem;
+    color: rgb(80, 35, 20);
+    text-align: left;
+    display: -webkit-box;
+    overflow: hidden;
+    line-height: 1.2rem;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    color: rgb(80, 35, 20);
+}
 body {
     background-color: #f5ebdc;
     font-family: "Flame";
