--- a/src/components/Customization/CustomizationNutritionInformation/CustomizationNutritionInformation.module.css
+++ b/src/components/Customization/CustomizationNutritionInformation/CustomizationNutritionInformation.module.css
@@ -5,5 +5,5 @@
 .CustomizationNutritionInfomartion p {
     margin-bottom: 1rem;
     font-size: 0.7rem;
-    font-weight: 500;
+    font-weight: normal;
 }
