--- a/src/components/Main/Hero/Hero.module.css
+++ b/src/components/Main/Hero/Hero.module.css
@@ -30,7 +30,7 @@
 }
 
 .HeroActions button:first-of-type {
-    margin-right: 1rem;
+    margin-right: 20px;
 }
 
 @media screen and (max-width: 760px) {
