--- a/src/components/Navigation/NavItems/NavItem/NavItem.module.css
+++ b/src/components/Navigation/NavItems/NavItem/NavItem.module.css
@@ -10,6 +10,6 @@
     position: relative;
     margin: 0px auto 0px 1.3rem;
     font-size: 1.125rem;
-    font-weight: 500;
+    font-weight: normal;
     color: rgb(80, 35, 20);
 }
