--- a/src/containers/MenuPage/MenuPage.module.css
+++ b/src/containers/MenuPage/MenuPage.module.css
@@ -4,11 +4,12 @@
 .MenuPageHeading {
     background-color: rgb(214, 35, 0);
     text-align: center;
-    padding: 3rem 0;
+    padding: 4rem 0;
 }
 
 .MenuPageHeading h2 {
-    font-weight: 700;
-    font-size: 3rem;
+    text-align: center;
+    font-size: 3.5rem;
+    margin: auto;
     color: rgb(245, 235, 220);
 }
