--- a/src/components/Cart/CartItem/CartItem.module.css
+++ b/src/components/Cart/CartItem/CartItem.module.css
@@ -1,4 +1,5 @@
 .CartItem {
+    font-family: "Flame";
     background-color: rgb(255, 255, 255);
     width: 100%;
     color: rgb(80, 35, 20);
@@ -18,7 +19,7 @@
 .CartItemDescription p {
     color: rgb(43, 2, 0);
     font-size: 0.8rem;
-    font-weight: 500;
+    font-weight: normal;
     margin: 0px;
 }
 .CartItemDescription div:first-of-type {
@@ -26,7 +27,6 @@
 }
 .CartItemDescription {
     display: flex;
-    -webkit-box-pack: justify;
     justify-content: space-between;
     /* align-items: center; */
     margin-bottom: 4px;
@@ -37,7 +37,7 @@
     display: flex;
     letter-spacing: normal;
     line-height: 1.25rem;
-    font-weight: 700;
+    font-weight: normal;
     font-size: 1.25rem;
     font-stretch: condensed;
     text-transform: none;
@@ -46,10 +46,12 @@
 
 .CartItemActions p {
     color: rgb(214, 35, 0);
-    padding: 0.75rem 0;
+    padding: 0.85rem 0.35rem;
+    line-height: 1;
     cursor: pointer;
-    font-weight: 700;
-    font-size: 0.9rem;
+    font-weight: normal;
+    font-size: 1rem;
+    font-family: "Flame";
 }
 
 .CartItemActions {
