--- a/src/components/Checkout/CheckoutCart/CheckoutCart.module.css
+++ b/src/components/Checkout/CheckoutCart/CheckoutCart.module.css
@@ -1,5 +1,6 @@
 .CheckoutCart {
     grid-area: cart / cart / cart / cart;
+    font-size: 0.9375rem;
 }
 
 .CheckoutCart li {
@@ -36,5 +37,5 @@
     border-bottom: 1px solid rgb(105, 63, 52);
 }
 .CheckoutCartTotals div:last-of-type {
-    font-weight: 700;
+    font-weight: bold;
 }
