--- a/src/components/Checkout/CheckoutHeader/CheckoutHeader.module.css
+++ b/src/components/Checkout/CheckoutHeader/CheckoutHeader.module.css
@@ -20,13 +20,14 @@
     position: absolute;
     left: calc(2.25rem + env(safe-area-inset-left));
     display: flex;
-    -webkit-box-align: center;
     align-items: center;
-    -webkit-box-pack: center;
     justify-content: center;
     color: white;
 
     font-size: 1.2rem;
     line-height: 1.3;
-    font-weight: 700;
+    font-weight: normal;
+
+    font-weight: bold;
+    font-family: "Flame Sans";
 }
