--- a/src/components/Checkout/CheckoutRadioOption/CheckoutRadioOption.module.css
+++ b/src/components/Checkout/CheckoutRadioOption/CheckoutRadioOption.module.css
@@ -71,10 +71,10 @@
 
 .CheckoutRadioOptionDescription h4 {
     font-size: 1.2rem;
-    font-weight: 500;
+    font-weight: normal;
 }
 
 .CheckoutRadioOptionDescription span {
     color: rgb(105, 63, 52);
-    font-weight: 500;
+    font-weight: normal;
 }
