--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -69,6 +69,7 @@ footer {
 }
 
 .FooterHorizontalLinks a {
+    font-family: "Flame Sans";
     padding-right: 0.5rem;
     margin-right: 0.5rem;
     border-right: 1px solid rgb(194, 185, 172);
@@ -88,10 +89,11 @@ footer {
 }
 
 .LogoText {
+    font-family: "Flame Sans";
     color: rgb(245, 235, 220);
     text-transform: uppercase;
     font-size: 1.6rem;
-    font-weight: normal;
+    font-weight: bold;
 }
 
 .FooterLegalParagraph {
