--- a/src/components/SmallSlider/CustomSlide/CustomSlide.module.css
+++ b/src/components/SmallSlider/CustomSlide/CustomSlide.module.css
@@ -46,5 +46,5 @@ a.active > span::before {
     font-size: 0.85rem;
     text-align: center;
     white-space: nowrap;
-    font-weight: 700;
+    font-weight: normal;
 }
