--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -40,7 +40,7 @@
     color: rgb(214, 35, 0);
     background-color: rgb(245, 235, 220);
     font-size: 1.25rem;
-    font-weight: 500;
+    font-weight: normal;
     padding: 0.75rem 3rem;
 }
 
