--- a/src/components/UI/Incrementor/Incrementor.module.css
+++ b/src/components/UI/Incrementor/Incrementor.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex: 1 1 0%;
     align-items: flex-end;
-    font-weight: 600;
+    font-weight: normal;
     justify-content: flex-end;
 }
 
