fixed useState memory leak caused by useStorageUrlDownload Hook

--- a/src/components/Customization/CustomizationHeading/CustomizationHeading.module.css
+++ b/src/components/Customization/CustomizationHeading/CustomizationHeading.module.css
@@ -22,8 +22,8 @@
     margin: 1rem 0px 1.75rem;
 }
 
-@media screen and (max-width: 760px) {
+/* @media screen and (max-width: 760px) {
     .CustomizationHeading p {
         text-align: center;
     }
-}
+} */
