installed react-helmet for dynamic title change, added About Page

--- a/src/components/Customization/CustomizationNutritionInformation/CustomizationNutritionInformation.module.css
+++ b/src/components/Customization/CustomizationNutritionInformation/CustomizationNutritionInformation.module.css
@@ -3,7 +3,10 @@
 }
 
 .CustomizationNutritionInfomartion p {
-    margin-bottom: 1rem;
-    font-size: 0.7rem;
+    margin-bottom: 0.7rem;
+    font-size: 0.75rem;
     font-weight: normal;
+}
+.CustomizationNutritionInfomartion p:last-of-type {
+    margin-bottom: 4rem;
 }
