--- a/src/containers/About/About.module.css
+++ b/src/containers/About/About.module.css
@@ -11,9 +11,13 @@
     margin: auto;
     color: rgb(245, 235, 220);
 }
-.AboutMessage {
-    max-width: 1000px;
+.Wrapper {
     margin: 2rem auto;
+
+    max-width: 1000px;
+}
+
+.AboutMessage {
     padding: 2rem;
     border-radius: 10px;
     box-shadow: rgb(73 73 73 / 20%) 0px 0px 4px 0px;
@@ -24,5 +28,49 @@
     margin: auto;
     line-height: 2;
     font-size: 1.3rem;
-    margin-bottom: 1rem;
+}
+
+.ToolsList {
+    display: flex;
+    justify-content: space-between;
+    margin: 3rem auto;
+    flex-flow: row wrap;
+}
+
+/* Tools */
+.Tool {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+.ToolImage {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.ToolImage img {
+    width: 100%;
+    height: 100%;
+    max-width: 85px;
+    max-height: 75px;
+}
+.Tool > span:last-of-type {
+    margin-top: 1.5rem;
+}
+
+@media screen and (max-width: 760px) {
+    .Tool {
+        flex-basis: 50%;
+    }
+    .Tool:nth-of-type(n + 3) {
+        margin-top: 2rem;
+    }
+}
+
+/* End Tools */
+@media screen and (max-width: 1000px) {
+    .Wrapper {
+        padding: 0.5rem;
+    }
 }
