--- a/src/components/Checkout/CheckoutExtraItems/CheckoutExtraItem/CheckoutExtraItem.module.css
+++ b/src/components/Checkout/CheckoutExtraItems/CheckoutExtraItem/CheckoutExtraItem.module.css
@@ -8,7 +8,7 @@
     background-color: rgb(255, 255, 255);
     border-radius: 10px;
     box-shadow: rgb(73 73 73 / 20%) 0px 0px 4px 0px;
-    margin: 4px 10px 4px 4px;
+    margin: 4px 16px 4px 4px;
     padding: 15px 15px 20px;
     border: none;
     cursor: pointer;
@@ -30,8 +30,8 @@
 .CheckoutExtraItem > div:first-of-type {
     width: 70px;
     height: 65px;
-    margin-right: 8px;
 }
+
 .CheckoutExtraItem > div:first-of-type img {
     display: block;
     height: 100%;
@@ -56,4 +56,10 @@
     font-size: 2.5rem;
     color: red;
     margin: 0 0.5rem;
+}
+
+@media screen and (max-width: 710px) {
+    .CheckoutExtraItem {
+        margin-right: 0px; 
+    }
 }
