--- a/src/components/Checkout/CheckoutExtraItems/CheckoutExtraItems.module.css
+++ b/src/components/Checkout/CheckoutExtraItems/CheckoutExtraItems.module.css
@@ -4,19 +4,20 @@
 
 .CheckoutExtraItems > div {
     display: flex;
-    overflow: auto;
+    justify-content: space-between;
+    overflow: hidden;
 }
 
 .CheckoutExtraItems {
-    width: 667px;
+    max-width: 668px;
     height: 150px;
-    overflow: auto;
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 710px) {
     .CheckoutExtraItems > div {
         flex-direction: column;
     }
+
     .CheckoutExtraItems {
         width: 100%;
         height: 260px;
