--- a/src/components/Navigation/NavItems/NavItem/NavItem.module.css
+++ b/src/components/Navigation/NavItems/NavItem/NavItem.module.css
@@ -8,7 +8,7 @@
     display: inline-block;
     text-transform: none;
     position: relative;
-    margin: 0px auto 0px 1.3rem;
+    margin: 0;
     font-size: 1.125rem;
     font-weight: normal;
     color: rgb(80, 35, 20);
